// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authReducer AUTHENTICATE_FAILURE nulls currentUser and accessToken properties 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: null,
  refreshing: false,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_FAILURE sets refreshing to false 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: null,
  refreshing: true,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_REQUEST sets refreshing to true 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: null,
  refreshing: true,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_SUCCESS sets refreshing to false 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: null,
  refreshing: true,
}
`;

exports[`authReducer VERIFY_TOKEN_FAILURE nulls currentUser and accessToken properties 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: null,
  refreshing: false,
}
`;

exports[`authReducer VERIFY_TOKEN_REQUEST sets accessToken property 1`] = `
Immutable.Map {
  currentUser: null,
  accessToken: Immutable.Map {
    accessToken: "token",
  },
  refreshing: false,
}
`;

exports[`authReducer VERIFY_TOKEN_SUCCESS sets currentUser property 1`] = `
Immutable.Map {
  currentUser: Immutable.Map {
    id: 1,
  },
  accessToken: null,
  refreshing: false,
}
`;
